@@ -49,6 +49,23 @@ General {
 	SocketBufferSizeMaxGrown 655355
 }
 
+Stats {
+	#
+	# Enable connection logging. Default is off.
+	# Logfile: on, off, or a filename
+	# Default file: (/var/log/conntrackd-stats.log)
+	#
+	LogFile on
+
+	#
+	# Enable connection logging via Syslog. Default is off.
+	# Syslog: on, off or a facility name (daemon (default) or local0..7)
+	# If you set the facility, use the same as in the General clause, 
+	# otherwise you'll get a warning message.
+	#
+	#Syslog on
+}
+
 #
 # Ignore traffic for a certain set of IP's: Usually
 # all the IP assigned to the firewall since local
@@ -69,8 +86,3 @@ IgnoreProtocol {
 #	VRRP
 	# numeric numbers also valid
 }
-
-#
-# Strip NAT traffic
-#
-StripNAT
